# fl-humbucker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Analysis/: BeatboxClassifier.cpp  BeatboxClassifier.h  MidiEmitter.cpp  MidiEmitter.h  OnsetDetector.cpp  OnsetDetector.h  PatternRecorder.cpp  PatternRecorder.h  PatternRenderer.cpp  PatternRenderer.h  PerformanceCapture.cpp  PerformanceCapture.h  PerformanceSampler.cpp  PerformanceSampler.h  PitchDetector.cpp  PitchDetector.h  SampleCapture.cpp  SampleCapture.h  SampleSlot.cpp  SampleSlot.h
Source/UI/: PerformanceTimeline.cpp  PerformanceTimeline.h
docs/: FL_STUDIO_SETUP.md
scripts/: build.sh  install-vst3.ps1
